2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Data.PostGIS/PostGISFeatureSource.cs: hook up shapefile

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Drawing.OpenGL/OpenGlMapDrawer.cs: move layer style stuff
	  to separate class

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.DrawMap/Cumberland.DrawMap.csproj,
	  Cumberland.DrawMap/lib/NDesk,Options.COPYING,
	  Cumberland.DrawMap/lib/NDesk.Options.COPYING,
	  Cumberland.InteractiveMap/Cumberland.InteractiveMap.csproj,
	  Cumberland.InteractiveMap/lib/NDesk,Options.COPYING,
	  Cumberland.InteractiveMap/lib/NDesk.Options.COPYING,
	  Cumberland.Data.SqlServer.Loader/lib/NDesk,Options.COPYING,
	  Cumberland.Data.SqlServer.Loader/lib/NDesk.Options.COPYING,
	  Cumberland.Data.SqlServer.Loader/Cumberland.Data.SqlServer.Loader.csproj:
	  rename file

2008-11-03  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Data.SqlServer.Loader/AssemblyInfo.cs: improvements
	* Cumberland.Data.SqlServer.Loader/Main.cs: improve

2008-11-03  Scott Ellington <scott.ellington@gmail.com> 

	* cumberland.sln, Cumberland.Data.SqlServer.Loader,
	  Cumberland.Data.SqlServer.Loader/AssemblyInfo.cs,
	  Cumberland.Data.SqlServer.Loader/lib,
	  Cumberland.Data.SqlServer.Loader/lib/NDesk,Options.COPYING,
	  Cumberland.Data.SqlServer.Loader/lib/NDesk.Options.dll,
	  Cumberland.Data.SqlServer.Loader/Main.cs,
	  Cumberland.Data.SqlServer.Loader/Cumberland.Data.SqlServer.Loader.csproj:
	  add sql server loader

2008-10-31  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.DrawMap/Main.cs, Cumberland.InteractiveMap/Main.cs,
	  Cumberland.TileViewerTest/TileProvider.aspx.cs,
	  Cumberland.Data.PostGIS/PostGISFeatureSource.cs: rename providers
	  to sources

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TileViewerTest/TileProvider.aspx.cs: clean up

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 
